# task_manager

./: Cargo.toml  README.md
examples/: quick_dev.rs
src/: main.rs
src/common/: mod.rs
src/common/errors/: mod.rs
src/web/: mod.rs
src/web/login/: login_factory.rs  mock_login.rs  mod.rs
src/web/task_manager/: mod.rs  mw_require_auth.rs
src/web/task_manager/model/: app_state.rs  mock_state.rs  mod.rs  model_handler.rs
