[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
axum-core = "0.4.1"
dyn-clone = "1.0.16"
lazy-regex = "3.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.10.0"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"
