[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
axum = "0.7.6"
axum-core = "0.4.4"
dyn-clone = "1.0.17"
lazy-regex = "3.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.10.0"

[dev-dependencies]
anyhow = "1.0.89"
httpc-test = "0.1.10"
